--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ install:
   # Qt5
   - sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev
   - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
+  # QtSvg
+  - sudo apt-get install -qq libqt5svg5*
   # C++14
   - sudo apt-get install -qq g++-5
 
