--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,22 @@ sudo: require
 dist: trusty # Qt5, from https://gist.github.com/jreese/6207161#gistcomment-1462109
 
 before_install:
-  # Qt5, from https://gist.github.com/jreese/6207161#gistcomment-1462109
-  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo apt-get update -qq
   # C++14
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+  # Qt5, nop need thanks to Trusty
+  #- sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  #- sudo apt-get update -qq
 
 install: 
+  # C++14
+  - sudo apt-get install -qq g++-5
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
   # Qt5
   - sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev
   - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
   # QtSvg
   - sudo apt-get install -qq libqt5svg5*
-  # C++14
-  - sudo apt-get install -qq g++-5
 
 # Start virtual X server, from https://docs.travis-ci.com/user/gui-and-headless-browsers/
 before_script:
