--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ install:
   - sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev
   - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
   # QtSvg
-  - sudo apt-get install -qq libqt5svg5*
+  - sudo apt-get install libqt5svg5-dev
+  #- sudo apt-get install -qq libqt5svg5*
 
 # Start virtual X server, from https://docs.travis-ci.com/user/gui-and-headless-browsers/
 before_script:
